@@ -5,7 +5,8 @@ imagemagick (8:6.6.7.2-1) unstable; urgency=low
   * Modify rules in order to use git-buildpackage.
   * New upstream release. Drop patch for reading config files 
   from current directory, corrected upstream.
-  * Fix a build failure
+  * Fix a build failure: do not try to remove empty directories if list is nil
+  * Perlmagick: Fix a build failure, always run make install
 
  -- Bastien ROUCARIÈS <roucaries.bastien+debian@gmail.com>  Fri, 21 Jan 2011 18:01:33 +0100
 
